# CyberShield-CTI

./: .gitignore  PROJECT_EXPLAINED.md  README.md  advisory_gen.py  key.env  main.py  pyproject.toml  requirements.txt  run_intel.bat  used_code.txt
reports/: ADVISORY_20260326_190058.txt  ADVISORY_20260327_160040.txt  ADVISORY_20260403_033435.txt  FULL_ADVISORY_20260318_193631.txt  FULL_ADVISORY_20260318_194643.txt  FULL_ADVISORY_20260318_200427.txt  FULL_ADVISORY_20260318_202151.txt  FULL_ADVISORY_20260318_203929.txt  FULL_ADVISORY_20260318_215030.txt  FULL_ADVISORY_20260318_221645.txt  FULL_ADVISORY_20260319_212732.txt  IOC_ONLY_20260403_032745.txt  url_report_index.json
reports/Clean_Artifacts/: ARTIFACTS_20260318_193631.txt  ARTIFACTS_20260318_194643.txt  CLEAN_ARTIFACTS_20260403_032745.txt
reports/Malicious_IOCs/: URGENT_BLOCKLIST_20260318_193631.txt  URGENT_BLOCKLIST_20260318_194643.txt  URGENT_BLOCKLIST_20260318_200427.txt  URGENT_BLOCKLIST_20260318_202151.txt  URGENT_BLOCKLIST_20260318_203929.txt  URGENT_BLOCKLIST_20260318_215030.txt  URGENT_BLOCKLIST_20260318_221645.txt  URGENT_BLOCKLIST_20260319_212732.txt
